force-app/main/default/objects/Version__c/Version__c.object-meta.xml
<CustomObject>
    <label>Version</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Nombre de Versiones</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Versiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>