force-app/main/default/objects/Version__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comentarios</label>
    <length>121072</length>
    <type>LongTextArea</type>
</CustomField>