force-app/main/default/objects/Version__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notas/Listas</label>
    <referenceTo>Container__c</referenceTo>
    <relationshipLabel>Versiones</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <type>Lookup</type>
</CustomField>